feat : add image to post messages
