# src/entity/message.entity.ts
@@ -11,18 +11,16 @@ export class MessageEntity {
   @PrimaryGeneratedColumn()
   id: number;
 
-  @Column({ type: 'varchar', length: 20 })
-  platform: 'instagram' | 'page';
+  @Column({ type: 'varchar', length: 50 })
+  platform: 'instagram' | 'page' | 'whatsapp_business_account';
 
   @Column({ type: 'varchar', length: 100 })
   senderId: string;
 
   @Column({ type: 'varchar', length: 100 })
   recipientId: string;
-
-  @Column({ type: 'datetime' })
+  @Column({ type: 'datetime', default: () => 'CURRENT_TIMESTAMP' })
   timestamp: Date;
-
   @Column({ type: 'varchar', length: 255, nullable: true })
   messageId: string;
 
